--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-wheel~=0.38.4
-EbookLib~=0.18
-beautifulsoup4~=4.11.2
-azure-cognitiveservices-speech~=1.25.0
-requests-html~=0.10.0
-pyaudio~=0.2.13
+wheel
+EbookLib
+beautifulsoup4
+azure-cognitiveservices-speech
+requests-html
+just_playback
 # tkinter
